# VerticalAI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.consultorias/: informe-consultoria-agentes.html
.features/: Featore00_Memory.md  Feature01_API.md  Feature02.md  Feature03.md  Feature04.md  Feature05.md
.producto/: IdeaDeNegocio.md
fiscal_agent/: __init__.py  __main__.py  arca_ws.py  calendario_afip.json  cli.py  config.py  email_sender.py  feriados.csv  matching.py  models.py  pdf_generator.py  rules_engine.py
fiscal_agent/api/: __init__.py  auth.py  deps.py  rate_limiter.py  server.py  store.py
fiscal_agent/browser/: __init__.py  composio.py  task.py
fiscal_agent/chat/: __init__.py  intent_router.py  response_builder.py
fiscal_agent/mcp/: __init__.py  server.py  transport.py
fiscal_agent/memory/: __init__.py  brain.py  client.py  config.py  models.py
fiscal_agent/tests/: __init__.py  test_api_memory.py  test_chat_api.py  test_health_extended.py  test_intent_router.py  test_mcp_memory.py  test_memory.py  test_memory_models.py  test_metrics_middleware.py  test_response_builder.py  test_system_routes.py  test_tenant_brain.py
frontend/IdeaDashboardControlSistema_v0-joaquindev23-6a0ac6de/: Dockerfile  README.md  next.config.mjs  pnpm-lock.yaml
frontend/IdeaDashboardai-chatbot-interface-template/: README.md  next.config.mjs  pnpm-lock.yaml
frontend/IdeaLandingPage_optimus-the-ai-platform-to-bu/: Dockerfile  tsconfig.tsbuildinfo
openspec/: config.yaml
openspec/changes/: 003-pdf-header-marker-and-deuda-fix.md  frontend-ui.md
(+193 files in other folders)
